services IMGs no longer stretching with content

--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,7 @@ body h2 {
   flex-grow: 1;
   font-weight: bold;
   font-size: 48px;
-  background-color: #D8D8D8;
+  background-color: #828282;
 }
 .container-NAV .menu.ON a {
   display: flex;
@@ -204,7 +204,7 @@ body h2 {
   font-weight: bold;
   font-size: 64px;
   line-height: 75px;
-  background-color: #D8D8D8;
+  background-color: #828282;
 }
 .container-NAV .nav .nav-contentLeft h2 {
   color: #ffffff;
@@ -459,7 +459,7 @@ body h2 {
   margin: 10px 0px;
 }
 .container-servicesContent .content img {
-  display: flex;
+  margin: auto;
 }
 .container-servicesContent .content[data-option='1'] {
   display: flex;
