--- a/less/nav.less
+++ b/less/nav.less
@@ -10,13 +10,12 @@
 
         a:hover {
             background-color: #222222;
-            // color: black;
+            // color: #222222;
         }
     }
 
     .menu.ON {
         display: flex;
-        // z-index: 1;
         
         width: 100wh;
         height: 100vh;
@@ -31,7 +30,7 @@
         font-weight: bold;
         font-size: 48px;
 
-        background-color: #D8D8D8;
+        background-color: #828282;
     
     
         a {
@@ -59,7 +58,7 @@
         font-weight: bold;
         font-size: 64px;
         line-height: 75px;
-        background-color: #D8D8D8;
+        background-color: #828282;
 
         .nav-contentLeft {
             h2 {
