--- a/less/services.less
+++ b/less/services.less
@@ -42,7 +42,7 @@
         }
 
         img {
-            display: flex;
+            margin: auto;
         }
     };
 
